--- a/index.html
+++ b/index.html
@@ -4,113 +4,225 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Style Css -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="adress">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="adress-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="adress-link" href="tel:110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <!-- Section effective solution -->
+      <section class="effective-solutions">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="btn" type="button">
+          <span class="btn-order">Order Service</span>
+        </button>
       </section>
       <section>
+        <!-- Section Our Benefits -->
         <h2>Our Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="benefits-list">
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Strategy</h3>
+            <p class="benefits-list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Punctuality</h3>
+            <p class="benefits-list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Diligence</h3>
+            <p class="benefits-list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Technologies</h3>
+            <p class="benefits-list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- Section Our teams -->
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
+              class="team-avatar"
               src="./images/our_teams/mark_guerrero.jpg"
               alt="Mark Guerrero product designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-fullname">Mark Guerrero</h3>
+            <p class="team-job-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-avatar"
               src="./images/our_teams/tom_ford.jpg"
               alt="Tom Ford frontend developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-fullname">Tom Ford</h3>
+            <p class="team-job-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-avatar"
               src="./images/our_teams/camila_garcia.jpg"
               alt="Camila Garcia marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-fullname">Camila Garcia</h3>
+            <p class="team-job-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-avatar"
               src="./images/our_teams/daniel_wilson.jpg"
               alt="Daniel Wilson ui designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-fullname">Daniel Wilson</h3>
+            <p class="team-job-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Section Our Portfolio -->
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/banking_app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-name">Banking App</h3>
+            <p class="project-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/cashless_payment.jpg"
+              alt="Cashless App"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-name">Cashless Payment</h3>
+            <p class="project-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/medidation_app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfproject-name">Medidation App</h3>
+            <p class="project-text">App</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/taxi_service.jpg"
+              alt="Taxi Service Marketing"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-name">Taxi Service</h3>
+            <p class="project-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/screen_illustrations.jpg"
+              alt="Screen Illustrations Design"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfproject-name">Screen Illustrations</h3>
+            <p class="project-text">Design</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              class="portfolio-project"
+              src="./images/our_portfolio/online_courses.jpg"
+              alt="Online Courses Marketing"
+              width="360"
+              height="300"
+            />
+            <h3 class="project-name">Online Courses</h3>
+            <p class="project-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!-- Section Footer -->
+    <footer class="section-footer-logo">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-part-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
