--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section>
         <!-- Section Our Benefits -->
-        <h2>Our Benefits</h2>
+        <h2 class="benefits-title">Our Benefits</h2>
         <ul class="benefits-list">
           <li class="benefits-list-item">
             <h3 class="benefits-list-title">Strategy</h3>
