Зробленні всі правки

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >Web<span class="logo-part">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
@@ -53,7 +53,9 @@
     <main>
       <!-- Section effective solution -->
       <section class="effective-solutions">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title-effective-solutions">
+          Effective Solutions for Your Business
+        </h1>
         <button class="btn" type="button">
           <span class="btn-order">Order Service</span>
         </button>
@@ -173,12 +175,12 @@
           <li class="portfolio-list-item">
             <img
               class="portfolio-project"
-              src="./images/our_portfolio/medidation_app.jpg"
+              src="./images/our_portfolio/meditation_app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3 class="portfproject-name">Medidation App</h3>
+            <h3 class="project-name">Meditation App</h3>
             <p class="project-text">App</p>
           </li>
           <li class="team-list-item">
@@ -200,7 +202,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfproject-name">Screen Illustrations</h3>
+            <h3 class="project-name">Screen Illustrations</h3>
             <p class="project-text">Design</p>
           </li>
           <li class="team-list-item">
